--- a/less/events.less
+++ b/less/events.less
@@ -209,10 +209,11 @@
 							padding-bottom: 0;
 						}
 					}
-					& > a {
-						padding-top: 30px;
-						padding-bottom: 30px;
-						
+					@media (min-width: @screen-md-min) {
+						& > a {
+							padding-top: 30px;
+							padding-bottom: 30px;
+						}
 					}
 				}
 			}
